--- a/templates/leads/components/drawers/request_lead.html
+++ b/templates/leads/components/drawers/request_lead.html
@@ -48,20 +48,20 @@
                             <option value="PH">Phones</option>
                         </select>
                     </div>
-                    <div>
-                        <label for="brand"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Hashtags</label>
-                        <input type="text" name="brand" id="brand"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                            placeholder="Product brand" required="">
+                    <div class="sm:col-span-2">
+                        <label for=" brand" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                            Hashtags</label>
+                        <p class="text-gray-600 text-sm dark:text-gray-100 mb-2">Select hashtags to filter potential
+                            leads
+                        </p>
+                        <div class="flex flex-wrap">
+                            <button type="button"
+                                class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">#RealEstate</button>
+                            <button type="button"
+                                class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">#RealEstateBuyer</button>
+                        </div>
                     </div>
-                    <div>
-                        <label for="price"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Price</label>
-                        <input type="number" name="price" id="price"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                            placeholder="$2999" required="">
-                    </div>
+
                     <div class="grid gap-4 sm:col-span-2 md:gap-6 sm:grid-cols-4">
                         <div>
                             <label for="weight"
@@ -94,50 +94,17 @@
                                 placeholder="23" required="">
                         </div>
                     </div>
-                    <div class="sm:col-span-2"><label for="description"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label><textarea
-                            id="description" rows="4"
-                            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                            placeholder="Write product description here"></textarea></div>
+
                 </div>
-                <div class="mb-4 space-y-4 sm:flex sm:space-y-0">
-                    <div class="flex items-center mr-4">
-                        <input id="inline-checkbox" type="checkbox" value="" name="sellingType"
-                            class="w-4 h-4 bg-gray-100 rounded border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                        <label for="inline-checkbox"
-                            class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">In-store only</label>
-                    </div>
-                    <div class="flex items-center mr-4">
-                        <input id="inline-2-checkbox" type="checkbox" value="" name="sellingType"
-                            class="w-4 h-4 bg-gray-100 rounded border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                        <label for="inline-2-checkbox"
-                            class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">Online selling
-                            only</label>
-                    </div>
-                    <div class="flex items-center mr-4">
-                        <input checked="" id="inline-checked-checkbox" type="checkbox" value="" name="sellingType"
-                            class="w-4 h-4 bg-gray-100 rounded border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                        <label for="inline-checked-checkbox"
-                            class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">Both in-store and
-                            online</label>
-                    </div>
-                </div>
+
 
                 <div class="items-center space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
                     <button type="submit"
-                        class="w-full sm:w-auto justify-center text-white inline-flex bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Add
-                        product</button>
-                    <button
-                        class="w-full sm:w-auto text-white justify-center inline-flex items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-                        <svg class="mr-1 -ml-1 w-5 h-5" fill="currentColor" viewbox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        Schedule
+                        class="w-full sm:w-auto justify-center text-white inline-flex bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Generate
+                        Leads
                     </button>
-                    <button data-modal-toggle="createProductModal" type="button"
+
+                    <button data-modal-toggle="requestLeadModal" type="button"
                         class="w-full justify-center sm:w-auto text-gray-500 inline-flex items-center bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
                         <svg class="mr-1 -ml-1 w-5 h-5" fill="currentColor" viewbox="0 0 20 20"
                             xmlns="http://www.w3.org/2000/svg">
