--- a/templates/leads/components/drawers/request_lead.html
+++ b/templates/leads/components/drawers/request_lead.html
@@ -165,6 +165,16 @@
                         <p class="text-gray-600 text-sm dark:text-gray-100 mb-2">Prioritize leads with higher engagement
                             (likes, comments, shares)</p>
                     </div>
+                    <div class="sm:col-span-2">
+                        <label for="weight"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Location Keywords
+                        </label>
+                        <input type="text" id="location" value="Ontario"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            placeholder="E.g Ontario, Alberta, Quebec" required />
+
+
+                    </div>
 
                     <div class="sm:col-span-2">
                         <label for="weight" class="block mb-4 text-sm font-medium text-gray-900 dark:text-white">Request
